Logs upload, strange text response parsing
