# openapi.yml
@@ -24,6 +24,12 @@ servers:
         default: api.browserstack.com
       basePath:
         default: "/5"
+  - url: "{scheme}://{host}"
+    variables:
+      scheme:
+        default: https
+      host:
+        default: api-cloud.browserstack.com
 
 security:
   - BasicAuth: []
@@ -758,20 +764,22 @@ paths:
     post:
       summary: Upload terminal logs for your build.
       description: Upload terminal logs for your build.
-      operationId: uploadAutomateTerminalLogs
+      operationId: uploadAutomateBuildTerminalLogs
       parameters:
         - name: buildId
           in: path
           description: "ID of your build"
           required: true
           schema:
-            type: number
-            example: 966019
+            type: string
+            example: "a4fb480a55efd6b3c558afb1ee051a7c337b8ef0"
       requestBody:
+        required: true
         content:
           multipart/form-data:
             schema:
               type: object
+              required: [file]
               properties:
                 file:
                   type: string
@@ -785,6 +793,7 @@ paths:
             application/json:
               schema:
                 type: object
+                required: [status, message]
                 properties:
                   status:
                     type: string
@@ -792,8 +801,8 @@ paths:
                     example: "success"
                   message:
                     type: string
-                    description: "Message indicating the deletion of the builds"
-                    example: "The following build(s) were deleted successfully: 83078c39baf5c12cbbfcbd26a788d05ddfad626c,55e9782d749f601d09571023f56a8f0101929428."
+                    description: "Message indicating upload result."
+                    example: "File has been uploaded successfully!"
 
         "400":
           $ref: '#/components/schemas/400.BadRequest'
@@ -1063,6 +1072,57 @@ paths:
             text/plain:
               schema:
                 type: string
+
+        "400":
+          $ref: '#/components/schemas/400.BadRequest'
+        "401":
+          $ref: '#/components/schemas/401.Unauthorized'
+        "404":
+          $ref: '#/components/schemas/404.NotFound'
+        "422":
+          $ref: '#/components/schemas/422.UnprocessableEntity'
+        "500":
+          $ref: '#/components/schemas/5xx.InternalServerError'
+
+  /automate/sessions/{sessionId}/terminallogs:
+    post:
+      summary: Upload terminal logs for your session.
+      description: Upload terminal logs for your session.
+      operationId: uploadAutomateSessionTerminalLogs
+      parameters:
+        - name: sessionId
+          in: path
+          description: "ID of your session"
+          required: true
+          schema:
+            type: string
+            example: "4207442b2b0567368956dba064c22a3235a76214"
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              required: [file]
+              properties:
+                file:
+                  type: string
+                  format: binary
+                  description: "Path to the terminal log file on your machine. The max allowed file size is 2MB"
+
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                required: [message]
+                properties:
+                  message:
+                    type: string
+                    description: "Message indicating upload result."
+                    example: "File has been uploaded successfully!"
 
         "400":
           $ref: '#/components/schemas/400.BadRequest'
