# src/api.ts
@@ -2,20 +2,34 @@ import { paths } from "@/generated/openapi";
 import { servers } from "@/generated/openapi.json";
 import pkginfo from "@/pkginfo";
 import createClient, { ClientOptions, FetchOptions } from "openapi-fetch";
-import { FilterKeys, HasRequiredKeys, PathsWithMethod } from "openapi-typescript-helpers";
+import {
+  FilterKeys,
+  HasRequiredKeys,
+  PathsWithMethod,
+} from "openapi-typescript-helpers";
 
+const [{ variables }, { variables: cloudVars }] = servers;
 
-const [ { variables } ] = servers;
-const defaultBaseUrl = `${variables.scheme.default}://${variables.host.default}${variables.basePath.default}`;
+const defaultBaseUrl = `${variables.scheme.default}://${
+  variables.host.default
+}${variables.basePath ? variables.basePath.default : ""}`;
+const apiCloudBaseUrl = `${cloudVars.scheme.default}://${
+  cloudVars.host.default
+}${cloudVars.basePath ? cloudVars.basePath.default : ""}`;
 
 export interface APIClientOptions extends ClientOptions {
-  username?: string
-  key?: string
+  username?: string;
+  key?: string;
 }
 
-export class APIClient {
+export type ExtraRequestOptions =
+  | { useSdkCloud?: boolean | undefined }
+  | undefined;
 
+export class APIClient {
   protected readonly sdk: ReturnType<typeof createClient<paths>>;
+
+  protected readonly sdkCloud: ReturnType<typeof createClient<paths>>;
 
   constructor(options: APIClientOptions) {
     const username = options.username ?? process.env.BROWSERSTACK_USERNAME;
@@ -24,26 +38,34 @@ export class APIClient {
     const key = options.key ?? process.env.BROWSERSTACK_KEY;
     // assert(key, "key is required");
 
-    this.sdk = createClient<paths>({
+    const clientOptions: ClientOptions = {
       ...options,
       baseUrl: options.baseUrl ?? defaultBaseUrl,
       headers: {
         ...options.headers,
-        "Authorization": `Basic ${Buffer.from(`${username}:${key}`).toString("base64")}`,
+        Authorization: `Basic ${Buffer.from(`${username}:${key}`).toString(
+          "base64"
+        )}`,
         "User-Agent": pkginfo.userAgent,
       },
+    };
+
+    this.sdk = createClient<paths>(clientOptions);
+
+    this.sdkCloud = createClient<paths>({
+      ...clientOptions,
+      baseUrl: apiCloudBaseUrl,
     });
   }
 
   protected async makeGetRequest<P extends PathsWithMethod<paths, "get">>(
     path: P,
     ...init: HasRequiredKeys<
-    FetchOptions<FilterKeys<paths[P], "get">>
-  > extends never
-    ? [(FetchOptions<FilterKeys<paths[P], "get">> | undefined)?]
-    : [FetchOptions<FilterKeys<paths[P], "get">>]
+      FetchOptions<FilterKeys<paths[P], "get">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "get">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "get">>]
   ) {
-
     const res = await this.sdk.GET(path, ...init);
     if (res.error || !res.data) {
       throw new Error(`Error fetching ${path}: ${res.error}`);
@@ -55,13 +77,30 @@ export class APIClient {
   protected async makePostRequest<P extends PathsWithMethod<paths, "post">>(
     path: P,
     ...init: HasRequiredKeys<
-    FetchOptions<FilterKeys<paths[P], "post">>
-  > extends never
-    ? [(FetchOptions<FilterKeys<paths[P], "post">> | undefined)?]
-    : [FetchOptions<FilterKeys<paths[P], "post">>]
+      FetchOptions<FilterKeys<paths[P], "post">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "post">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "post">>]
   ) {
-
     const res = await this.sdk.POST(path, ...init);
+    if (res.error || !res.data) {
+      throw new Error(`Error fetching ${path}: ${res.error}`);
+    }
+
+    return res.data;
+  }
+
+  protected async makeCloudPostRequest<
+    P extends PathsWithMethod<paths, "post">
+  >(
+    path: P,
+    ...init: HasRequiredKeys<
+      FetchOptions<FilterKeys<paths[P], "post">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "post">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "post">>]
+  ) {
+    const res = await this.sdkCloud.POST(path, ...init);
     if (res.error || !res.data) {
       throw new Error(`Error fetching ${path}: ${res.error}`);
     }
@@ -72,12 +111,11 @@ export class APIClient {
   protected async makePutRequest<P extends PathsWithMethod<paths, "put">>(
     path: P,
     ...init: HasRequiredKeys<
-    FetchOptions<FilterKeys<paths[P], "put">>
-  > extends never
-    ? [(FetchOptions<FilterKeys<paths[P], "put">> | undefined)?]
-    : [FetchOptions<FilterKeys<paths[P], "put">>]
+      FetchOptions<FilterKeys<paths[P], "put">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "put">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "put">>]
   ) {
-
     const res = await this.sdk.PUT(path, ...init);
     if (res.error || !res.data) {
       throw new Error(`Error fetching ${path}: ${res.error}`);
@@ -89,12 +127,11 @@ export class APIClient {
   protected async makePatchRequest<P extends PathsWithMethod<paths, "patch">>(
     path: P,
     ...init: HasRequiredKeys<
-    FetchOptions<FilterKeys<paths[P], "patch">>
-  > extends never
-    ? [(FetchOptions<FilterKeys<paths[P], "patch">> | undefined)?]
-    : [FetchOptions<FilterKeys<paths[P], "patch">>]
+      FetchOptions<FilterKeys<paths[P], "patch">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "patch">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "patch">>]
   ) {
-
     const res = await this.sdk.PATCH(path, ...init);
     if (res.error || !res.data) {
       throw new Error(`Error fetching ${path}: ${res.error}`);
@@ -106,12 +143,11 @@ export class APIClient {
   protected async makeDeleteRequest<P extends PathsWithMethod<paths, "delete">>(
     path: P,
     ...init: HasRequiredKeys<
-    FetchOptions<FilterKeys<paths[P], "delete">>
-  > extends never
-    ? [(FetchOptions<FilterKeys<paths[P], "delete">> | undefined)?]
-    : [FetchOptions<FilterKeys<paths[P], "delete">>]
+      FetchOptions<FilterKeys<paths[P], "delete">>
+    > extends never
+      ? [(FetchOptions<FilterKeys<paths[P], "delete">> | undefined)?]
+      : [FetchOptions<FilterKeys<paths[P], "delete">>]
   ) {
-
     const res = await this.sdk.DELETE(path, ...init);
     if (res.error || !res.data) {
       throw new Error(`Error fetching ${path}: ${res.error}`);
@@ -120,8 +156,30 @@ export class APIClient {
     return res.data;
   }
 
+  protected fixInvalidJSONResponse<O>(data: any) {
+    let response: O | undefined = data;
+
+    if (typeof data === "string" && data.match(/^http\//i)) {
+      // HTTP/1.1 0 Unknown Reason-Phrase
+      // Status: 0 Unknown Reason-Phrase
+      try {
+        const r = data.split("\n").at(-1);
+        if (r) {
+          response = JSON.parse(r);
+        }
+      } catch (err) {
+        /* ignore */
+      }
+    }
+
+    if (!response) {
+      throw new Error(`Invalid response: ${data}`);
+    }
+
+    return response;
+  }
+
   getAccountStatus(options?: FetchOptions<paths["/status"]["get"]>) {
     return this.sdk.GET("/status", options);
   }
-
 }
